# mtg-format-checker

./: Cargo.toml
src/: main.rs
