[package]
name = "mtg_format_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["query", "form", "json", "native-tls", "rustls"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
